--- a/CW/app/src/main/AndroidManifest.xml
+++ b/CW/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".Fruit"
             android:label="@string/about_title"></activity>
+        <activity android:name=".Vegetables"></activity>
 
     </application>
 
