--- a/CW/app/src/main/AndroidManifest.xml
+++ b/CW/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".Fruit" android:label="@string/about_title"></activity>
         <activity android:name=".Vegetables"></activity>
         <activity android:name=".Meals"></activity>
+        <activity android:name=".SelectedDishes"></activity>
 
     </application>
 
