--- a/CW/app/src/main/AndroidManifest.xml
+++ b/CW/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Seafood"></activity>
         <activity android:name=".Cereals"></activity>
         <activity android:name=".Greenery"></activity>
+        <activity android:name=".Berries"></activity>
     </application>
 
 </manifest>
