Добавил изменения в добавление textView в процессе выполнения приложения. Добавил закрывание сокета в другом классе.

--- a/CW/app/src/main/AndroidManifest.xml
+++ b/CW/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".Cereals"></activity>
         <activity android:name=".Greenery"></activity>
         <activity android:name=".Berries"></activity>
+        <activity android:name=".Recipe"></activity>
     </application>
 
 </manifest>
