--- a/CW/app/src/main/AndroidManifest.xml
+++ b/CW/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity"
+            />
         <activity android:name=".Fruit" android:label="@string/about_title"></activity>
         <activity android:name=".Vegetables"></activity>
         <activity android:name=".Meals"></activity>
