--- a/CW/app/src/main/AndroidManifest.xml
+++ b/CW/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".Greenery"></activity>
         <activity android:name=".Berries"></activity>
         <activity android:name=".Recipe"></activity>
+        <activity android:name=".Favourites"></activity>
     </application>
 
 </manifest>
