--- a/CW/app/src/main/AndroidManifest.xml
+++ b/CW/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.artem.cw">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@mipmap/app_name"
         android:label="@string/app_name"
